# fastapi.prod.starter

./: .env.example  .gitignore  INSTALL.md  README.md  env.local.reference.txt  env.reference.txt  pyproject.toml  requirements.txt  setup.py
.context/: prompt.md
.docker/: Dockerfile.dev  Dockerfile.prod  docker-compose.dev.yml  docker-compose.prod.yml
.docker/prometheus/: alert_rules.yml  prometheus.yml
app/: __init__.py  main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/routers/: auth.py  items.py  (+1 more)
app/core/: auth.py  config.py  monitoring.py  security.py
app/db/: resilient.py  session.py
app/models/: item.py
app/models/primary/: user.py
app/monitoring/: database.py  external.py  middleware.py
app/repositories/: base.py  user_repository.py
app/services/: user_service.py
docs/: README.md  flask-integration.md  production-deployment.md  production-resilience.md  quick-start.md  scripts.md  security-best-practices.md  supabase-local-dev.md  supabase-setup.md  testing.md
scripts/: README.md  dev.py  kill.py  local.py  migrate_to_supabase.py  prod.py  run.py  test.py
src/backend/: __init__.py  main.py  metrics.py
src/backend/api/: __init__.py  deps.py
src/backend/core/: auth.py  config.py  middleware.py  monitoring.py  pkce.py  resilience.py  security.py
src/backend/db/: resilient.py  session.py
src/backend/monitoring/: __init__.py  database.py  external.py  metrics.py  middleware.py
src/backend/repositories/: base.py  user_repository.py
src/backend/services/: user_service.py
src/frontend/: app.py
src/frontend/templates/: login.html  profile.html
temp_sessions/: R8RyRD003cvbktvy6AVhhw
tests/: conftest.py
tests/unit/services/: test_user_service.py
(+9 files in other folders)
